--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "expo-cli": "^3.13.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-webview": "^8.1.0",
